[gd_scene load_steps=2 format=3 uid="uid://dw0v0wedvf26n"]

[ext_resource type="Script" uid="uid://cycicky4or155" path="res://scripts/rest_scene_ui.gd" id="1_iqdkn"]

[node name="RestSceneUI" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqdkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Rest" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rest"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Upgrade" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Upgrade Card"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Leave" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Leave"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Rest" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Leave" to="." method="_on_leave_pressed"]
